# REST-API

./: .gitignore  README.md  app.py  build_database.py  config.py  model.py  notes.py  people.db  people.py  pyproject.toml  sqlite.py  swagger.yml
templates/: home.html
