[tool.poetry]
name = "rest-api"
version = "0.1.0"
description = ""
authors = ["rcardinaux <raphael.cardinaux@gmail.com>"]
readme = "README.md"
packages = [{include = "rest_api"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
flask = "^2.2.3"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
flask-marshmallow = {extras = ["sqlalchemy"], version = "^0.14.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
